# textstats

./: .dockerignore  .gitignore  Dockerfile  README.md  README.org  docker-compose.yml  gunicorn.py  pyproject.toml  pytest.ini
app/: Dockerfile  pyproject.toml
app/tests/: test_vangogh.py
app/textstats/: __init__.py  processing.py  teidoc.py
data/: tei-example-facsimiles.xml  tei-example.xml
models/: vg-model-5let.pickle.REMOVED.git-id  vg-model-all.pickle.REMOVED.git-id
nginx/: Dockerfile
nginx/sites-enabled/: nginx.conf
src/: __init__.py  keyterms.py  processing.py  teidoc.py
tests/: test_vangogh.py
textstats/: Dockerfile  main.py  pyproject.toml  teidoc.py  utils.py
textstats/src/: __init__.py  main.py  processing.py  teidoc.py
vangogh/: codepoints.py  constants.py  corpus.py  letter.py  main.py  teidoc.py  timethis.py  topic_model.py  utils.py  vangogh.py
