[tool.poetry]
name = "vangogh"
version = "0.1.0"
description = ""
authors = ["proprefenetre <proprefenetre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.3"
spacy = "^2.1"
langdetect = "^1.0"
xmltodict = "^0.12.0"
textacy = "^0.7.1"
flask = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
