[tool.poetry]
name = "textstats"
version = "0.1.0"
description = "Provide simple textstats for TEI-documents"
authors = ["Niels Eigenraam <niels.eigenraam@di.huc.knaw.nl>"]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.3"
spacy = "^2.1"
flask = "^1.0"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
